# SynthMind-AI_Automation-Toolkit

./: InsideCrafter.py  Purifier.py  Questioner-Demo.py  README (Meta Minds).md  Readme[Purifier].md
Data_Purifier/: .dockerignore  Dockerfile  Readme.md  main.py  meta_output.txt  project_structure.txt  pyproject.toml  requirements.txt  setup.py  test_openai_key.py
Data_Purifier/Agents/: cleaner_agent.py  cleaning_validator_agent.py  delete_cleaner_simple.py  meta_analyzer_agent.py  modification_validator_agent.py  modifier_agent.py  orchestrator_agent.py  process_recorder_agent.py  transformation_validator_agent.py  transformer_agent.py
Data_Purifier/agents/: cleaner_agent.py  cleaner_agent_simple.py  cleaning_validator_agent.py  meta_analyzer_agent.py  modification_validator_agent.py  modifier_agent.py  orchestrator_agent.py  process_recorder_agent.py  transformation_validator_agent.py  transformer_agent.py
Data_Purifier/config/: settings.py
Data_Purifier/core/: data_processor.py  feature_selector.py
Data_Purifier/data/: DIS_stock_split.csv  NFLX_stock_split.csv
Data_Purifier/docs/: api_reference.md
Data_Purifier/example/: basic_usage.ipynb  fixed_notebook.ipynb
Data_Purifier/examples/: basic_usage.ipynb
Data_Purifier/tasks/: cleaner_tasks.py  cleaning_validator_tasks.py  meta_analyzer_tasks.py  modification_validator_tasks.py  modifier_tasks.py  process_recorder_tasks.py  transformation_validator_tasks.py  transformer_tasks.py
Data_Purifier/tests/: conftest.py  run_tests.py  test_cleaner.py  test_integration.py  test_meta_analyzer.py  (+3 more)
(+24 files in other folders)
