[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "data_purifier"
version = "0.1.0"
description = "A data cleaning and transformation toolkit"
requires-python = ">=3.8"
dependencies = [
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "scikit-learn>=1.3.0",
    "ydata-profiling>=4.5.0",
    "crewai>=0.1.0",
    "openai>=1.0.0",
    "python-dotenv>=1.0.0"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["data_purifier*"]
